ctowasm/test/samples/error/decrement_non_modifiable_lvalue.c
int main() {
  const int x;
  --x;
}